--- a/porten-shop-project/index.html
+++ b/porten-shop-project/index.html
@@ -17,6 +17,7 @@
     <title>Watch-shop</title>
 </head>
 <body>
+    
     <header>
         <div class="container">
             <div class="header">
@@ -320,7 +321,7 @@
                             Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.
                         </span>
                         <div class="footer_link_box">
-                            <input placeholder="enter your e-mail" type="text">
+                            <input class="input" placeholder="enter your e-mail" type="text">
                             <button>подписаться</button>
                         </div>
                     </div>
