--- a/porten-shop-project/index.html
+++ b/porten-shop-project/index.html
@@ -331,7 +331,8 @@
         <div class="subfooter">
             <div class="info">
                 <span>Сделал: Саенко Сергей</span>
-                <a href="https://github.com/YourContender">Мой GitHub</a>
+                <a target="_blank" href="https://github.com/YourContender">Мой GitHub</a>
+                <a target="_blank" href="https://www.figma.com/file/0a01UVA3pCxrJTXErEGLho/PORTEN?node-id=0%3A1">Оригинал дизайна</a>
             </div>
             <div>
                 <span>© 2022</span>
