--- a/porten-shop-project/index.html
+++ b/porten-shop-project/index.html
@@ -268,6 +268,9 @@
                 </div>
                 
             </div>
+            <div >
+                <button class="commercial_btn">смотреть еще</button>
+            </div>
         </div>
     </section>
 
